no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
@@ -346,7 +346,7 @@
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentRelativeLayout
-                android:id="@+id/ll_controller"
+                android:id="@+id/ll_fangkong"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
