--- a/WowCarLauncher/mobile/src/main/res/layout/content_set_fangkong.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_set_fangkong.xml
@@ -27,6 +27,15 @@
     <View style="@style/Interval" />
 
     <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_fangkong_disconnect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="断开方控"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
         android:id="@+id/sv_fangkong_impl_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
