no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_set.xml
@@ -31,6 +31,15 @@
                 <View style="@style/Interval" />
 
                 <com.wow.carlauncher.common.view.SetView
+                    android:id="@+id/sg_obd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    st:titleEx="OBD设置"
+                    st:type="buttonB" />
+
+                <View style="@style/Interval" />
+
+                <com.wow.carlauncher.common.view.SetView
                     android:id="@+id/sg_fangkong"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -118,6 +127,10 @@
 
                 <include
                     layout="@layout/content_set_system"
+                    android:visibility="gone" />
+
+                <include
+                    layout="@layout/content_set_obd"
                     android:visibility="gone" />
             </LinearLayout>
         </ScrollView>
