--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
@@ -3,135 +3,107 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/l_item_bg"
+    android:padding="10dp">
+
 
     <com.zhy.android.percent.support.PercentRelativeLayout
+        android:id="@+id/ll_icon"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        app:layout_heightPercent="90%w">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="10dp"
-            android:background="@null"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="高德导航"
-            android:textColor="@android:color/white"
-            app:layout_textSizePercent="7%h" />
-
+        android:layout_height="0dp"
+        android:layout_alignParentTop="true"
+        android:background="@mipmap/nav_icon_bg"
+        app:layout_heightPercent="100%w">
 
         <ImageView
             android:id="@+id/iv_icon"
-            android:layout_width="100dp"
-            android:layout_height="10dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_amap"
-            app:layout_heightPercent="40%h"
-            app:layout_widthPercent="40%h" />
-
-
-        <FrameLayout
-            android:id="@+id/ll_controller"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            app:layout_heightPercent="25%w">
+            android:layout_centerHorizontal="true"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_amap"
+            app:layout_heightPercent="60%h"
+            app:layout_marginTopPercent="15%h"
+            app:layout_widthPercent="60%h" />
+    </com.zhy.android.percent.support.PercentRelativeLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
 
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/btn_go_home"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:src="@mipmap/ic_jia"
-                        app:layout_heightPercent="70%h"
-                        app:layout_widthPercent="70%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
-
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/btn_go_company"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:src="@mipmap/ic_gongsi"
-                        app:layout_heightPercent="70%h"
-                        app:layout_widthPercent="70%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/l_bg_line1" />
-        </FrameLayout>
+    <LinearLayout
+        android:id="@+id/ll_controller"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/ll_icon"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingTop="20dp">
 
         <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_navi"
+            android:id="@+id/btn_go_home"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@mipmap/ic_jia"
+                app:layout_heightPercent="60%w"
+                app:layout_widthPercent="60%w" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
+
+        <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/btn_go_company"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@mipmap/ic_gongsi"
+                app:layout_heightPercent="60%w"
+                app:layout_widthPercent="60%w" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_navi"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/ll_icon"
+        android:orientation="vertical"
+        android:paddingTop="20dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_road"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_heightPercent="25%w">
+            android:layout_weight="1"
+            android:gravity="center_horizontal|bottom"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="500米后 胶州路"
+            android:textColor="#f1f1f1"
+            app:layout_textSizePercent="30%h" />
 
-            <com.zhy.android.percent.support.PercentLinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:orientation="horizontal"
-                app:layout_heightPercent="50%h">
-
-                <TextView
-                    android:id="@+id/tv_dis"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|end"
-                    android:paddingRight="20dp"
-                    android:text="500米后"
-                    app:layout_textSizePercent="60%h" />
-
-                <TextView
-                    android:id="@+id/tv_road"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|start"
-                    android:paddingLeft="20dp"
-                    android:text="胶州路"
-                    app:layout_textSizePercent="60%h" />
-            </com.zhy.android.percent.support.PercentLinearLayout>
-
-            <TextView
-                android:id="@+id/tv_msg"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:gravity="center"
-                android:text="剩余20公里"
-                app:layout_heightPercent="50%h"
-                app:layout_textSizePercent="30%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-    </com.zhy.android.percent.support.PercentRelativeLayout>
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal|top"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:text="剩余20公里"
+            android:textColor="#f1f1f1"
+            app:layout_textSizePercent="30%h" />
+    </LinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
