--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_launcher.xml
@@ -2,144 +2,135 @@
 <com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/l_item_bg"
+    android:padding="10dp">
+
 
     <com.zhy.android.percent.support.PercentRelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
-        app:layout_heightPercent="90%w">
+        android:layout_height="0dp"
+        app:layout_heightPercent="100%w">
+
+        <ImageView
+            android:id="@+id/music_iv_cover"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/morenzhuanji"
+            app:layout_heightPercent="60%h"
+            app:layout_marginTopPercent="15%h"
+            app:layout_widthPercent="60%h" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="10dp"
+            android:layout_height="0dp"
+            android:layout_alignParentBottom="true"
             android:background="@null"
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
             android:text="歌曲名称"
-            android:textColor="#ffffff"
-            app:layout_textSizePercent="7%h" />
+            android:textColor="#f1f1f1"
+            app:layout_heightPercent="15%h"
+            app:layout_textSizePercent="12%h" />
+    </com.zhy.android.percent.support.PercentRelativeLayout>
 
-        <LinearLayout
+    <com.zhy.android.percent.support.PercentRelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@id/rl_top"
+        android:orientation="vertical">
+
+
+        <com.zhy.android.percent.support.PercentLinearLayout
             android:id="@+id/ll_controller"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingTop="20dp">
 
             <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
                     android:id="@+id/ll_prew"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_margin="5dp"
                     android:clickable="true"
                     android:contentDescription="@string/app_name"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/music_pre"
-                    app:layout_heightPercent="70%w" />
-
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/ic_prev"
+                    app:layout_heightPercent="80%w"
+                    app:layout_widthPercent="80%w" />
             </com.zhy.android.percent.support.PercentLinearLayout>
-
-            <com.zhy.android.percent.support.PercentRelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="7">
-
-                <com.zhy.android.percent.support.PercentRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    app:layout_heightPercent="100%w">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="fitXY"
-                        android:src="@mipmap/morenzhuanji" />
-
-                    <ImageView
-                        android:id="@+id/music_iv_cover"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="fitXY" />
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="fitXY"
-                        android:src="@mipmap/morenzhuanji1" />
-
-                    <ImageView
-                        android:id="@+id/iv_play"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_centerInParent="true"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/music_play"
-                        app:layout_heightPercent="35%h"
-                        app:layout_widthPercent="35%w" />
-                </com.zhy.android.percent.support.PercentRelativeLayout>
-            </com.zhy.android.percent.support.PercentRelativeLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
+                android:layout_weight="2"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/iv_play"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:contentDescription="@string/app_name"
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/ic_play"
+                    app:layout_heightPercent="60%w"
+                    app:layout_widthPercent="60%w" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
                     android:id="@+id/ll_next"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_margin="5dp"
                     android:clickable="true"
                     android:contentDescription="@string/app_name"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/music_next"
-                    app:layout_heightPercent="70%w" />
-
+                    android:scaleType="fitCenter"
+                    android:src="@mipmap/ic_next"
+                    app:layout_heightPercent="80%w"
+                    app:layout_widthPercent="80%w" />
             </com.zhy.android.percent.support.PercentLinearLayout>
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:lines="1"
-            android:textColor="@android:color/white"
-            app:layout_textSizePercent="5%h" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
 
         <ProgressBar
             android:id="@+id/pb_music"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_above="@id/tv_time"
             android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
             android:max="100"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:progressDrawable="@drawable/l_music_progress" />
+            android:progressDrawable="@drawable/l_music_progress"
+            app:layout_marginTopPercent="5%h" />
 
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@id/pb_music"
+            android:ellipsize="end"
+            android:gravity="right"
+            android:lines="1"
+            android:textColor="#f1f1f1"
+            app:layout_heightPercent="15%h"
+            app:layout_textSizePercent="10%h" />
     </com.zhy.android.percent.support.PercentRelativeLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
