--- a/WowCarLauncher/mobile/src/main/res/values/colors.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="launch_color5">#ea6072</color>
 
     <color name="toolbar_bg">#99000000</color>
-    <color name="launch_dock_bg">#99000000</color>
+    <color name="launch_dock_bg">#3c3d42</color>
     <color name="launch_gps_noinfo">#99000000</color>
 
 
